{{$NEXT}}
  - Fix DeprecatedFeatures to recognize correctly-parsed postderef in PPI 1.237+
  - Avoid warning from running PackageMatchesFilename policy on a document without a filename (willt #29)

0.024     2017-08-16 22:39:53 EDT
  - Make PackageMatchesFilename more robust against infinite loops

0.023     2017-08-16 22:22:40 EDT
  - Fix issue where PackageMatchesFilename policy would loop infinitely

0.022     2017-08-16 22:17:38 EDT
  - Also consider -W a violation of WarningsSwitch policy
  - Fix false positive in DollarAB policy where $a or $b is within another block
  - Add PackageMatchesFilename policy

0.021     2017-06-03 19:49:16 EDT
  - Be more lenient when trying to detect postderef for DeprecatedFeatures autoderef violations

0.020     2017-05-15 20:45:02 EDT
  - Updates to documentation for DeprecatedFeatures and DiscouragedModules policies
  - Add require ::Foo::Bar to DeprecatedFeatures policy
  - Remove qr//xx from DeprecatedFeatures policy as this is now a valid regex modifier in 5.26.

0.019     2017-01-29 22:13:34 EST
  - Add autoderef to DeprecatedFeatures policy

0.018     2016-12-08 21:32:40 EST
  - Add IndirectObjectNotation policy

0.017     2016-09-29 17:24:15 EDT
  - DeprecatedFeatures will now consider "use UNIVERSAL;" a policy violation
  - Add OverloadOptions policy

0.016     2016-07-02 17:53:20 EDT
  - Support <<>> operator in WhileDiamondDefaultAssignment policy
  - Fixes for DeprecatedFeatures checking of /xx violations

0.015     2016-07-02 03:20:35 EDT
  - add ArrayAssignAref policy
  - update DeprecatedFeatures policy with features deprecated in 5.22 and to be removed in 5.26

0.014     2016-01-26 20:45:18 EST
  - allow pairwise in DollarAB policy
  - allow DollarAB pair functions to be extended

0.013     2015-12-17 18:07:03 EST
  - Add ConditionalDeclarations policy

0.012     2015-10-16 15:13:21 EDT
  - add IO::Socket::INET6 to discouraged modules
  - Fix EmptyReturn to avoid reporting violations in void context functions