@@ -1,6 +1,7 @@
 {{$NEXT}}
   - Fix DeprecatedFeatures to recognize correctly-parsed postderef in PPI 1.237+
   - Avoid warning from running PackageMatchesFilename policy on a document without a filename (willt #29)
+  - Fix another false positive in DollarAB policy
 
 0.024     2017-08-16 22:39:53 EDT
   - Make PackageMatchesFilename more robust against infinite loops
